Bring Site Navigation to top on small screen

--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -6,5 +6,9 @@
   @extend %top-white-spaces;
 
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: column wrap;
+
+  @media (min-width: $breakpoint-content) {
+    flex-direction: row;
+  }
 }
