--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -1,5 +1,7 @@
 // Site Navigation
 .site-navigation {
+  order: -1;
+
   ul {
     display: flex;
     margin-bottom: 0;
@@ -9,7 +11,7 @@
   li {
     display: block;
     font-size: rem($ratio-text-logo);
-    margin-left: $width-gap-small;
+    margin-right: $width-gap-small;
   }
 
   a {
@@ -21,18 +23,12 @@
   }
 
   @media (min-width: $breakpoint-content) {
+    order: 0;
+
     li {
       font-size: rem($ratio-text-logo-content);
       margin-left: $width-gap;
-    }
-  }
-
-  @media (min-width: $breakpoint-full) {
-    margin-left: $width-gap;
-
-    li {
-      margin-left: 0;
-      margin-right: $width-gap;
+      margin-right: 0;
     }
   }
 }
