--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -5,7 +5,7 @@
   font-weight: 700;
   line-height: inherit;
   margin-bottom: 0;
-  margin-top: 0;
+  margin-top: $margin-tiny;
   text-transform: uppercase;
 
   a {
@@ -14,6 +14,7 @@
 
   @media (min-width: $breakpoint-content) {
     font-size: rem($ratio-text-logo-content);
+    margin-top: 0;
   }
 
   @media (min-width: $breakpoint-full) {
