Dim Section Footer text

--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -2,7 +2,7 @@
 .section-footer {
   @extend %indistinguishable-link;
 
-  color: $color-bg-dark;
+  color: $color-fg-light;
   float: left;
   font-size: rem($ratio-text-section-footer);
   width: 100%;
