Hang Section Footer on large screen

--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -1,6 +1,7 @@
 // Section Footer
 .section-footer {
   @extend %indistinguishable-link;
+  @extend %protrusion;
 
   color: $color-fg-light;
   float: left;
@@ -9,5 +10,11 @@
 
   p {
     margin-bottom: 0;
+  }
+
+  @media (min-width: $breakpoint-full) {
+    float: none;
+    text-align: right;
+    line-height: ($line-height-h1 * $ratio-text-h1 / $ratio-text-section-footer);
   }
 }
