Use foreground color for border

--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -13,7 +13,7 @@
 
   .query {
     background-color: $color-bg-light;
-    border: $width-border-site-search-query solid $color-bg-dark;
+    border: $width-border-site-search-query solid $color-fg-light;
     box-sizing: border-box;
     color: $color-fg;
     padding: 0 $height-site-search-query 0 $padding;
@@ -33,7 +33,6 @@
     background-size: 50%;
     border: 0;
     box-sizing: border-box;
-    color: $color-bg-light;
     padding: 0 0 0 $height-site-search-query;
     position: absolute;
     right: 0;
