--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -19,6 +19,6 @@ $color-secondary-dark: adjust-hue($color-secondary, -30deg);
 $color-secondary-light: lighten($color-secondary, 30%);
 
 // Core
-$color-border-blockquote: $color-bg-dark;
+$color-border-blockquote: $color-fg-light;
 
-$color-border-table: $color-bg-dark;
+$color-border-table: $color-fg-light;
