Remove First Heading

--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -4,5 +4,14 @@
 
   hyphens: auto;
   margin-bottom: $margin-gargantuan;
+  margin-top: (0 - $margin-top-h1 + $margin-top-top-white-spaces);
   text-align: justify;
+
+  @media (min-width: $breakpoint-content) {
+    margin-top: (0 - $margin-top-h1 + $margin-top-top-white-spaces-content);
+  }
+
+  @media (min-width: $breakpoint-full) {
+    margin-top: (0 - $margin-top-h1 + $margin-top-top-white-spaces-full);
+  }
 }
