--- a/src/css/class/_white-spaces.scss
+++ b/src/css/class/_white-spaces.scss
@@ -5,13 +5,13 @@
 
 // Top White Spaces
 %top-white-spaces {
-  margin-top: $margin;
+  margin-top: $margin-top-top-white-spaces;
 
   @media (min-width: $breakpoint-content) {
-    margin-top: $margin-large;
+    margin-top: $margin-top-top-white-spaces-content;
   }
 
   @media (min-width: $breakpoint-full) {
-    margin-top: $margin-huge;
+    margin-top: $margin-top-top-white-spaces-full;
   }
 }
