--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -225,6 +225,19 @@ kbd {
   }
 }
 
+var {
+  color: inherit;
+  background-color: $color-secondary-light;
+}
+
+samp {
+  color: $color-fg-light;
+}
+
+kbd {
+  color: $color-fg;
+}
+
 mark {
   background-color: $color-secondary;
   color: inherit;
