--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -3,7 +3,7 @@ $color-fg: rgb(63, 62, 60);
 $color-bg: rgb(250, 249, 247);
 
 $color-fg-dark: darken($color-fg, 10%);
-$color-fg-light: lighten($color-fg, 30%);
+$color-fg-light: lighten($color-fg, 20%);
 
 $color-bg-dark: darken($color-bg, 20%);
 $color-bg-light: lighten($color-bg, 2%);
@@ -16,9 +16,9 @@ $color-primary-dark: darken($color-primary, 20%);
 $color-primary-light: lighten($color-primary, 20%);
 
 $color-secondary-dark: adjust-hue($color-secondary, -30deg);
-$color-secondary-light: lighten($color-secondary, 30%);
+$color-secondary-light: adjust-hue($color-secondary, -120deg);
 
 // Core
-$color-border-blockquote: $color-fg-light;
+$color-border-blockquote: $color-bg-dark;
 
-$color-border-table: $color-fg-light;
+$color-border-table: $color-bg-dark;
