--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -13,7 +13,7 @@
 
   .query {
     background-color: $color-bg-light;
-    border: $width-border-site-search-query solid $color-fg-light;
+    border: $width-border-site-search-query solid $color-bg-dark;
     box-sizing: border-box;
     color: $color-fg;
     padding: 0 $height-site-search-query 0 $padding;
