Keep var contrast

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -226,8 +226,9 @@ kbd {
 }
 
 var {
-  color: inherit;
   background-color: $color-secondary-light;
+  color: $color-bg;
+  font-style: normal;
 }
 
 samp {
