Ditch placeholder classes

--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -1,17 +1,18 @@
 // Content
 .content {
-  @extend %centering;
-
   hyphens: auto;
-  margin-bottom: $margin-gargantuan;
-  margin-top: (0 - $margin-top-h1 + $margin-top-top-white-spaces);
+  margin: (0 - $margin-top-h1 + $margin-top-global-header) auto $margin-gargantuan;
+  max-width: $width-content;
+  padding-left: $width-gap-small;
+  padding-right: $width-gap-small;
   text-align: justify;
 
   @media (min-width: $breakpoint-content) {
-    margin-top: (0 - $margin-top-h1 + $margin-top-top-white-spaces-content);
+    margin-top: (0 - $margin-top-h1 + $margin-top-global-header-content);
   }
 
   @media (min-width: $breakpoint-full) {
-    margin-top: (0 - $margin-top-h1 + $margin-top-top-white-spaces-full);
+    margin-top: (0 - $margin-top-h1 + $margin-top-global-header-full);
+    padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
