--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -26,18 +26,19 @@ body {
 }
 
 h1 {
-  @extend %indistinguishable-link;
-
   font-size: rem($ratio-text-h1);
   font-weight: 400;
   line-height: $line-height-h1;
   margin: $margin-top-h1 0 $margin;
+
+  a {
+    text-decoration: none;
+  }
 }
 
 // Grouping Content
 p {
-  @extend %white-spaces;
-
+  margin: 0 0 $margin;
   text-align: inherit;
 }
 
@@ -59,7 +60,6 @@ hr {
 }
 
 pre {
-  @extend %white-spaces;
   $r: $ratio-text-small;
 
   clear: both;
@@ -67,6 +67,7 @@ pre {
   font-feature-settings: "zero" 1;
   font-size: rem($r);
   line-height: ($line-height-root * 2 / 3 / $r);
+  margin: 0 0 $margin;
   overflow: auto;
 
   @media (min-width: $breakpoint-content) {
@@ -78,10 +79,9 @@ pre {
 }
 
 blockquote {
-  @extend %white-spaces;
-
   border-left: $width-border-blockquote solid $color-border-blockquote;
   color: $color-fg-light;
+  margin: 0 0 $margin;
   padding-left: $padding-left-blockquote;
 
   figure > &,
@@ -96,8 +96,7 @@ blockquote {
 
 ul,
 ol {
-  @extend %white-spaces;
-
+  margin: 0 0 $margin;
   padding-left: $padding-left-list;
 
   ul,
@@ -116,7 +115,7 @@ ol {
 }
 
 dl {
-  @extend %white-spaces;
+  margin: 0 0 $margin;
 
   dl {
     margin-bottom: 0;
@@ -135,13 +134,11 @@ dd {
 }
 
 figure {
-  @extend %white-spaces;
-  @extend %positioning-root;
+  margin: 0 0 $margin;
+  position: relative;
 }
 
 figcaption {
-  @extend %protrusion;
-
   color: $color-fg-light;
   font-size: rem($ratio-text-small);
   margin-top: $margin-tiny;
@@ -162,7 +159,12 @@ figcaption {
 
   @media (min-width: $breakpoint-full) {
     bottom: 0;
+    margin-right: $width-gap;
+    position: absolute;
+    right: 100%;
     text-align: right;
+    width: $width-supplement;
+    z-index: 1;
 
     blockquote + & {
       position: static;
@@ -270,14 +272,13 @@ video {
 
 // Tabular Data
 table {
-  @extend %white-spaces;
-
   border-bottom: $width-border-table solid $color-border-table;
   border-collapse: collapse;
   border-spacing: 0;
   clear: both;
   display: inline-block;
   font-feature-settings: "tnum" 1;
+  margin: 0 0 $margin;
   max-width: 100%;
   overflow-x: auto;
   table-layout: fixed;
@@ -311,7 +312,7 @@ th {
 
 // Forms
 form {
-  @extend %white-spaces;
+  margin: 0 0 $margin;
 }
 
 :-ms-input-placeholder {
