--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -1,14 +1,26 @@
 // Global Header
 .global-header {
-  @extend %centering;
-  @extend %indistinguishable-link;
-  @extend %positioning-root;
-  @extend %top-white-spaces;
-
   display: flex;
   flex-flow: column wrap;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: $margin-top-global-header;
+  max-width: $width-content;
+  padding-left: $width-gap-small;
+  padding-right: $width-gap-small;
+  position: relative;
+
+  a {
+    text-decoration: none;
+  }
 
   @media (min-width: $breakpoint-content) {
     flex-direction: row;
+    margin-top: $margin-top-global-header-content;
+  }
+
+  @media (min-width: $breakpoint-full) {
+    margin-top: $margin-top-global-header-full;
+    padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
