--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -1,8 +1,5 @@
 // Section Footer
 .section-footer {
-  @extend %indistinguishable-link;
-  @extend %protrusion;
-
   color: $color-fg-light;
   float: left;
   font-size: rem($ratio-text-section-footer);
@@ -12,9 +9,17 @@
     margin-bottom: 0;
   }
 
+  a {
+    text-decoration: none;
+  }
+
   @media (min-width: $breakpoint-full) {
-    float: none;
-    text-align: right;
     line-height: ($line-height-h1 * $ratio-text-h1 / $ratio-text-section-footer);
+    margin-right: $width-gap;
+    position: absolute;
+    right: 100%;
+    text-align: right;
+    width: $width-supplement;
+    z-index: 1;
   }
 }
