--- a/src/css/global-header/_tagline.scss
+++ b/src/css/global-header/_tagline.scss
@@ -1,6 +1,13 @@
 // Tagline
 .tagline {
-  @extend %top-white-spaces;
-
   margin-bottom: 0;
+  margin-top: $margin-top-global-header;
+
+  @media (min-width: $breakpoint-content) {
+    margin-top: $margin-top-global-header-content;
+  }
+
+  @media (min-width: $breakpoint-full) {
+    margin-top: $margin-top-global-header-full;
+  }
 }
