--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -40,11 +40,6 @@ $width-scrollbar: 2rem;
 $breakpoint-content: (($width-blank + $width-content-outer + $width-blank) * $ratio-text-root-content / $ratio-text-root + $width-scrollbar);
 $breakpoint-full: (($width-blank + $width-full-outer + $width-blank) * $ratio-text-root-full / $ratio-text-root + $width-scrollbar);
 
-// Class
-$margin-top-top-white-spaces: $margin;
-$margin-top-top-white-spaces-content: $margin-large;
-$margin-top-top-white-spaces-full: $margin-huge;
-
 // Core
 $margin-top-h1: $margin-gargantuan;
 
@@ -55,6 +50,11 @@ $margin-left-blockquote-content: (- ($padding-left-blockquote + $width-border-bl
 $padding-left-list: $indent;
 
 $width-border-table: $width-border-small;
+
+// Global Header
+$margin-top-global-header: $margin;
+$margin-top-global-header-content: $margin-large;
+$margin-top-global-header-full: $margin-huge;
 
 // Subcontent
 $width-border-site-search-query: $width-border-small;
