--- a/src/css/widget/_hang.scss
+++ b/src/css/widget/_hang.scss
@@ -1,8 +1,12 @@
 // Hang
 .hang {
-  @extend %protrusion;
-
   @media (min-width: $breakpoint-full) {
+    margin-right: $width-gap;
+    position: absolute;
+    right: 100%;
+    width: $width-supplement;
+    z-index: 1;
+
     img {
       width: 100%;
     }
