--- a/src/css/widget/_pick.scss
+++ b/src/css/widget/_pick.scss
@@ -1,22 +1,20 @@
 // Pick
 .pick {
-  @extend %indistinguishable-link;
-  @extend %positioning-root;
-  @extend %white-spaces;
-
   $r: $ratio-text-enormous;
   $h: rem($line-height-h1 * $r / $ratio-text-h1);
   $m: ($h * 2);
 
   background-color: $color-primary-light;
-  margin-top: $margin-top-h1;
+  margin: $margin-top-h1 0 $margin;
   padding: $padding-small;
+  position: relative;
   text-align: center;
 
   a {
     border: $width-border-small solid;
     color: $color-bg;
     display: block;
+    text-decoration: none;
   }
 
   h1 {
