--- a/src/css/widget/_posts.scss
+++ b/src/css/widget/_posts.scss
@@ -1,7 +1,5 @@
 // Posts
 .posts {
-  @extend %indistinguishable-link;
-
   $lh: $line-height-tiny;
   $r: $ratio-text-large;
   $r-info: $ratio-text-small;
@@ -13,6 +11,10 @@
     line-height: $lh;
     list-style-type: none;
     margin-bottom: $margin;
+  }
+
+  a {
+    text-decoration: none;
   }
 
   .info {
