--- a/src/css/widget/_share.scss
+++ b/src/css/widget/_share.scss
@@ -1,7 +1,5 @@
 // Share
 .share {
-  @extend %indistinguishable-link;
-
   $c: $color-fg;
 
   ul {
@@ -21,6 +19,7 @@
     display: block;
     height: $w;
     overflow: hidden;
+    text-decoration: none;
     width: $w;
 
     &::before {
