--- a/src/css/_global-footer.scss
+++ b/src/css/_global-footer.scss
@@ -1,12 +1,22 @@
 // Global Footer
 .global-footer {
-  @extend %centering;
-  @extend %indistinguishable-link;
-  @extend %positioning-root;
-
   font-size: rem($ratio-text-global-footer);
+  margin-left: auto;
+  margin-right: auto;
+  max-width: $width-content;
+  padding-left: $width-gap-small;
+  padding-right: $width-gap-small;
+  position: relative;
+
+  a {
+    text-decoration: none;
+  }
 
   @media (min-width: $breakpoint-content) {
     display: flex;
+  }
+
+  @media (min-width: $breakpoint-full) {
+    padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
