--- a/src/css/_subcontent.scss
+++ b/src/css/_subcontent.scss
@@ -1,5 +1,13 @@
 // Subcontent
 .subcontent {
-  @extend %centering;
-  @extend %positioning-root;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: $width-content;
+  padding-left: $width-gap-small;
+  padding-right: $width-gap-small;
+  position: relative;
+
+  @media (min-width: $breakpoint-full) {
+    padding-left: ($width-gap-small + $width-supplement + $width-gap);
+  }
 }
