Use hsl() for colors

--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -1,22 +1,22 @@
 // Basic
-$color-fg: rgb(63, 62, 60);
-$color-bg: rgb(250, 249, 247);
+$color-fg: hsl(40, 3%, 24%);
+$color-bg: hsl(40, 24%, 96%);
 
-$color-fg-dark: darken($color-fg, 10%);
-$color-fg-light: lighten($color-fg, 20%);
+$color-fg-dark: hsl(40, 3%, 15%);
+$color-fg-light: hsl(40, 3%, 45%);
 
-$color-bg-dark: darken($color-bg, 20%);
-$color-bg-light: lighten($color-bg, 2%);
+$color-bg-dark: hsl(40, 24%, 75%);
+$color-bg-light: hsl(40, 24%, 99%);
 
 // Accent
-$color-primary: rgb(33, 117, 180);
-$color-secondary: rgb(251, 254, 0);
+$color-primary: hsl(207, 69%, 42%);
+$color-secondary: hsl(60, 99%, 51%);
 
-$color-primary-dark: darken($color-primary, 20%);
-$color-primary-light: lighten($color-primary, 20%);
+$color-primary-dark: hsl(207, 69%, 22%);
+$color-primary-light: hsl(207, 69%, 62%);
 
-$color-secondary-dark: adjust-hue($color-secondary, -30deg);
-$color-secondary-light: adjust-hue($color-secondary, -120deg);
+$color-secondary-dark: hsl(30, 99%, 51%);
+$color-secondary-light: hsl(300, 99%, 51%);
 
 // Core
 $color-border-blockquote: $color-bg-dark;
