Fix color preview mapping

--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -133,11 +133,11 @@ body::after {
 
   &.basic li {
     &:nth-child(1)::before {
-      background-color: $color-fg-dark;
+      background-color: $color-fg;
     }
 
     &:nth-child(2)::before {
-      background-color: $color-fg;
+      background-color: $color-fg-dark;
     }
 
     &:nth-child(3)::before {
@@ -145,11 +145,11 @@ body::after {
     }
 
     &:nth-child(4)::before {
-      background-color: $color-bg-dark;
+      background-color: $color-bg;
     }
 
     &:nth-child(5)::before {
-      background-color: $color-bg;
+      background-color: $color-bg-dark;
     }
 
     &:nth-child(6)::before {
@@ -157,13 +157,13 @@ body::after {
     }
   }
 
-  &.variation li {
+  &.accent li {
     &:nth-child(1)::before {
-      background-color: $color-primary-dark;
+      background-color: $color-primary;
     }
 
     &:nth-child(2)::before {
-      background-color: $color-primary;
+      background-color: $color-primary-dark;
     }
 
     &:nth-child(3)::before {
@@ -171,11 +171,11 @@ body::after {
     }
 
     &:nth-child(4)::before {
-      background-color: $color-secondary-dark;
+      background-color: $color-secondary;
     }
 
     &:nth-child(5)::before {
-      background-color: $color-secondary;
+      background-color: $color-secondary-dark;
     }
 
     &:nth-child(6)::before {
