Mark Site Navigation active item visually

--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -20,7 +20,19 @@
 
   mark {
     background-color: transparent;
-    color: $color-fg-light;
+    display: block;
+    position: relative;
+
+    &::after {
+      $w: 30%;
+
+      border: $width-border-small solid $color-fg-light;
+      content: "";
+      display: block;
+      left: ((100% - $w) / 2);
+      position: absolute;
+      width: $w;
+    }
   }
 
   @media (min-width: $breakpoint-content) {
