Update accent colors

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -180,12 +180,12 @@ main {
 
 // Text-level Semantics
 a {
-  color: $color-primary;
+  color: $color-accent;
   -webkit-text-decoration-skip: ink;
   text-decoration-skip: ink;
 
   &:visited {
-    color: $color-primary-dark;
+    color: $color-accent-dark;
   }
 }
 
@@ -196,8 +196,7 @@ em {
 }
 
 strong {
-  color: $color-secondary-dark;
-  padding: $padding-small;
+  color: $color-fg-strong;
 }
 
 cite {
@@ -227,22 +226,8 @@ kbd {
   }
 }
 
-var {
-  background-color: $color-secondary-light;
-  color: $color-bg;
-  font-style: normal;
-}
-
-samp {
-  color: $color-fg-light;
-}
-
-kbd {
-  color: $color-fg;
-}
-
 mark {
-  background-color: $color-secondary;
+  background-color: $color-bg-mark;
   color: inherit;
 }
 
