--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -9,16 +9,16 @@ $color-bg-dark: hsl(40, 24%, 75%);
 $color-bg-light: hsl(40, 24%, 99%);
 
 // Accent
-$color-primary: hsl(207, 69%, 42%);
-$color-secondary: hsl(60, 99%, 51%);
+$color-accent: hsl(207, 69%, 42%);
 
-$color-primary-dark: hsl(207, 69%, 22%);
-$color-primary-light: hsl(207, 69%, 62%);
-
-$color-secondary-dark: hsl(30, 99%, 51%);
-$color-secondary-light: hsl(300, 99%, 51%);
+$color-accent-dark: hsl(207, 69%, 22%);
+$color-accent-light: hsl(207, 69%, 62%);
 
 // Core
 $color-border-blockquote: $color-bg-dark;
+
+$color-fg-strong: hsl(0, 80%, 40%);
+
+$color-bg-mark: hsl(50, 100%, 60%);
 
 $color-border-table: $color-bg-dark;
