--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -81,14 +81,6 @@ body::after {
   }
 }
 
-// Version
-.version {
-  background-color: transparent;
-  color: $color-secondary-dark;
-  font-size: rem($ratio-text);
-  vertical-align: top;
-}
-
 // Fonts
 .font-family-body {
   font-family: $font-stack-system-ui;
@@ -111,13 +103,15 @@ body::after {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-bottom: 0;
   padding-left: 0;
 
   li {
     display: block;
-    height: rem($line-height);
+    height: rem($ratio-text-huge * $line-height);
+    margin-bottom: $margin;
     overflow: hidden;
-    width: calc((100% / 6) - #{$width-gap-small});
+    width: calc((100% / 3) - #{$width-gap-small});
 
     &::before {
       $c: rgb(0, 0, 0);
@@ -129,9 +123,7 @@ body::after {
       height: 100%;
       width: 100%;
     }
-  }
 
-  &.basic li {
     &:nth-child(1)::before {
       background-color: $color-fg;
     }
@@ -155,31 +147,17 @@ body::after {
     &:nth-child(6)::before {
       background-color: $color-bg-light;
     }
-  }
 
-  &.accent li {
-    &:nth-child(1)::before {
-      background-color: $color-primary;
+    &:nth-child(7)::before {
+      background-color: $color-accent;
     }
 
-    &:nth-child(2)::before {
-      background-color: $color-primary-dark;
+    &:nth-child(8)::before {
+      background-color: $color-accent-dark;
     }
 
-    &:nth-child(3)::before {
-      background-color: $color-primary-light;
-    }
-
-    &:nth-child(4)::before {
-      background-color: $color-secondary;
-    }
-
-    &:nth-child(5)::before {
-      background-color: $color-secondary-dark;
-    }
-
-    &:nth-child(6)::before {
-      background-color: $color-secondary-light;
+    &:nth-child(9)::before {
+      background-color: $color-accent-light;
     }
   }
 }
