--- a/src/css/widget/_pick.scss
+++ b/src/css/widget/_pick.scss
@@ -4,7 +4,7 @@
   $h: rem($line-height-h1 * $r / $ratio-text-h1);
   $m: ($h * 2);
 
-  background-color: $color-primary-light;
+  background-color: $color-accent-light;
   margin: $margin-top-h1 0 $margin;
   padding: $padding-small;
   position: relative;
