Use ken-ten for strong

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -195,6 +195,9 @@ em {
 }
 
 strong {
+  font-size: rem($ratio-text-small);
+  -webkit-text-emphasis-style: dot;
+  text-emphasis-style: dot;
 }
 
 cite {
