--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -5,14 +5,14 @@ $ratio: 1.7;
 $ratio-text-primary: 1;
 $ratio-text-secondary: 1.36;
 $ratio-text: $ratio-text-primary;
-$ratio-text-minimal: ($ratio-text-secondary / pow($ratio, 2));
+$ratio-text-minimal: ($ratio-text-secondary / $ratio / $ratio);
 $ratio-text-tiny: ($ratio-text-primary / $ratio);
 $ratio-text-small: ($ratio-text-secondary / $ratio);
 $ratio-text-large: $ratio-text-secondary;
 $ratio-text-huge: ($ratio-text-primary * $ratio);
 $ratio-text-gargantuan: ($ratio-text-secondary * $ratio);
-$ratio-text-enormous: ($ratio-text-primary * pow($ratio, 2));
-$ratio-text-maximal: ($ratio-text-secondary * pow($ratio, 2));
+$ratio-text-enormous: ($ratio-text-primary * $ratio * $ratio);
+$ratio-text-maximal: ($ratio-text-secondary * $ratio * $ratio);
 
 // Line Height
 $line-height: $ratio;
