--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -1,13 +1,13 @@
 // Margin
 $margin: rem($ratio);
-$margin-minimal: ($margin / pow($ratio, 3));
-$margin-tiny: ($margin / pow($ratio, 2));
+$margin-minimal: ($margin / $ratio / $ratio / $ratio);
+$margin-tiny: ($margin / $ratio / $ratio);
 $margin-small: ($margin / $ratio);
 $margin-large: ($margin * $ratio);
-$margin-huge: ($margin * pow($ratio, 2));
-$margin-gargantuan: ($margin * pow($ratio, 3));
-$margin-enormous: ($margin * pow($ratio, 4));
-$margin-maximal: ($margin * pow($ratio, 5));
+$margin-huge: ($margin * $ratio * $ratio);
+$margin-gargantuan: ($margin * $ratio * $ratio * $ratio);
+$margin-enormous: ($margin * $ratio * $ratio * $ratio * $ratio);
+$margin-maximal: ($margin * $ratio * $ratio * $ratio * $ratio * $ratio);
 
 // Indent
 $indent: $margin;
@@ -26,14 +26,14 @@ $padding-gargantuan: ($padding * 4);
 
 // Main Component
 $width-content: 32rem;
-$width-gap: ($width-content / pow($ratio, 6));
+$width-gap: ($width-content / $ratio / $ratio / $ratio / $ratio / $ratio / $ratio);
 $width-gap-small: ($width-gap / $ratio);
 $width-content-outer: ($width-gap-small + $width-content + $width-gap-small);
 $width-supplement: ($width-content-outer / $ratio - $width-gap-small - $width-gap-small);
 $width-supplement-outer: ($width-gap-small + $width-supplement + $width-gap-small);
 $width-full: ($width-supplement + $width-gap + $width-content);
 $width-full-outer: ($width-gap-small + $width-full + $width-gap-small);
-$width-blank: ($width-content / pow($ratio, 3));
+$width-blank: ($width-content / $ratio / $ratio / $ratio);
 
 // Breakpoint
 $width-scrollbar: 2rem;
@@ -59,4 +59,4 @@ $margin-top-global-header-full: $margin-huge;
 // Subcontent
 $width-border-site-search-query: $width-border-small;
 $height-site-search-query: (1rem + ($width-border-site-search-query + $padding-large) * 2);
-$width-site-search-query-content: ($width-content / pow($ratio, 2));
+$width-site-search-query-content: ($width-content / $ratio / $ratio);
