--- a/src/css/_global-footer.scss
+++ b/src/css/_global-footer.scss
@@ -1,6 +1,6 @@
 // Global Footer
 .global-footer {
-  font-size: rem($ratio-text-global-footer);
+  font-size: ($ratio-text-global-footer * 1rem);
   margin-left: auto;
   margin-right: auto;
   max-width: $width-content;
