--- a/src/css/content/_subheading.scss
+++ b/src/css/content/_subheading.scss
@@ -1,6 +1,6 @@
 // Subheading
 .subheading {
-  font-size: rem($ratio-text-large);
+  font-size: ($ratio-text-large * 1rem);
   margin-bottom: $margin-minimal;
   margin-top: $margin-huge;
 }
