--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -4,9 +4,6 @@
  * Licensed under MIT: http://hail2u.mit-license.org/2011
  */
 
-// Function
-@import "function/rem";
-
 // Variable
 @import "var/font";
 @import "var/color";
@@ -107,7 +104,7 @@ body::after {
 
   li {
     display: block;
-    height: rem($ratio-text-huge * $line-height);
+    height: ($ratio-text-huge * $line-height * 1rem);
     margin-bottom: $margin;
     overflow: hidden;
     width: calc((100% / 3) - #{$width-gap-small});
