--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -10,7 +10,7 @@
 
   li {
     display: block;
-    font-size: rem($ratio-text-logo);
+    font-size: ($ratio-text-logo * 1rem);
     margin-right: $width-gap-small;
   }
 
@@ -39,7 +39,7 @@
     order: 0;
 
     li {
-      font-size: rem($ratio-text-logo-content);
+      font-size: ($ratio-text-logo-content * 1rem);
       margin-left: $width-gap;
       margin-right: 0;
     }
