--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -1,5 +1,5 @@
 // Margin
-$margin: rem($ratio);
+$margin: ($ratio * 1rem);
 $margin-minimal: ($margin / $ratio / $ratio / $ratio);
 $margin-tiny: ($margin / $ratio / $ratio);
 $margin-small: ($margin / $ratio);
