--- a/src/css/widget/_move.scss
+++ b/src/css/widget/_move.scss
@@ -7,7 +7,7 @@
   img {
     display: block;
     height: auto;
-    max-height: rem($line-height-root * 12);
+    max-height: ($line-height-root * 12 * 1rem);
     max-width: ($width-content / 3);
     width: auto;
   }
