--- a/src/css/widget/_note.scss
+++ b/src/css/widget/_note.scss
@@ -1,6 +1,6 @@
 // Note
 .note {
   color: $color-fg-light;
-  font-size: rem($ratio-text-small);
+  font-size: ($ratio-text-small * 1rem);
   line-height: $line-height-small;
 }
