--- a/src/css/widget/_posts.scss
+++ b/src/css/widget/_posts.scss
@@ -7,7 +7,7 @@
   padding-left: 0;
 
   li {
-    font-size: rem($r);
+    font-size: ($r * 1rem);
     line-height: $lh;
     list-style-type: none;
     margin-bottom: $margin;
@@ -19,7 +19,7 @@
 
   .info {
     color: $color-fg-light;
-    font-size: rem($r-info);
+    font-size: ($r-info * 1rem);
   }
 
   @media (min-width: $breakpoint-content) {
