--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -26,7 +26,7 @@ body {
 }
 
 h1 {
-  font-size: rem($ratio-text-h1);
+  font-size: ($ratio-text-h1 * 1rem);
   font-weight: 400;
   line-height: $line-height-h1;
   margin: $margin-top-h1 0 $margin;
@@ -48,7 +48,7 @@ hr {
   box-sizing: content-box;
   clear: both;
   color: $color-fg-light;
-  font-size: rem($ratio-text-tiny);
+  font-size: ($ratio-text-tiny * 1rem);
   height: 1em;
   line-height: 1;
   margin: $margin-large 0;
@@ -65,7 +65,7 @@ pre {
   clear: both;
   font-family: $font-stack-monospace;
   font-feature-settings: "zero" 1;
-  font-size: rem($r);
+  font-size: ($r * 1rem);
   line-height: ($line-height-root * 2 / 3 / $r);
   margin: 0 0 $margin;
   overflow: auto;
@@ -140,7 +140,7 @@ figure {
 
 figcaption {
   color: $color-fg-light;
-  font-size: rem($ratio-text-small);
+  font-size: ($ratio-text-small * 1rem);
   margin-top: $margin-tiny;
 
   blockquote + & {
@@ -195,7 +195,7 @@ em {
 }
 
 strong {
-  font-size: rem($ratio-text-small);
+  font-size: ($ratio-text-small * 1rem);
   -webkit-text-emphasis-style: dot;
   text-emphasis-style: dot;
 }
