--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -2,7 +2,7 @@
 .section-footer {
   color: $color-fg-light;
   float: left;
-  font-size: rem($ratio-text-section-footer);
+  font-size: ($ratio-text-section-footer * 1rem);
   width: 100%;
 
   p {
