--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -1,7 +1,7 @@
 // Logo
 .logo {
   flex: auto;
-  font-size: rem($ratio-text-logo);
+  font-size: ($ratio-text-logo * 1rem);
   font-weight: 700;
   line-height: inherit;
   margin-bottom: 0;
@@ -13,7 +13,7 @@
   }
 
   @media (min-width: $breakpoint-content) {
-    font-size: rem($ratio-text-logo-content);
+    font-size: ($ratio-text-logo-content * 1rem);
     margin-top: 0;
   }
 
