--- a/src/css/widget/_pick.scss
+++ b/src/css/widget/_pick.scss
@@ -1,7 +1,7 @@
 // Pick
 .pick {
   $r: $ratio-text-enormous;
-  $h: rem($line-height-h1 * $r / $ratio-text-h1);
+  $h: ($line-height-h1 * $r / $ratio-text-h1 * 1rem);
   $m: ($h * 2);
 
   background-color: $color-accent-light;
@@ -19,13 +19,13 @@
 
   h1 {
     color: inherit;
-    font-size: rem($r);
+    font-size: ($r * 1rem);
     margin: $m 10%;
   }
 
   footer {
     position: absolute;
-    top: ($m - rem($line-height-root));
+    top: ($m - ($line-height-root * 1rem));
     width: 100%;
   }
 
@@ -38,7 +38,7 @@
     }
 
     footer {
-      top: ($m - rem($line-height-root));
+      top: ($m - ($line-height-root * 1rem));
     }
   }
 }
