--- a/src/css/widget/_seealso.scss
+++ b/src/css/widget/_seealso.scss
@@ -1,5 +1,5 @@
 // Seealso
 .seealso {
   color: $color-fg-light;
-  font-size: rem($ratio-text-large);
+  font-size: ($ratio-text-large * 1rem);
 }
