Cloak encode-color()

--- a/src/css/widget/_share.scss
+++ b/src/css/widget/_share.scss
@@ -1,5 +1,19 @@
 // Share
 .share {
+  @function encode-color($c) {
+    $r: "" + $c;
+
+    @if (str-index($r, "#") == 1) {
+      $r: "%23" + str-slice($r, 2);
+    }
+
+    @if (str-index($r, "rgba") == 1) {
+      $r: "rgba(" + red($c) + "%2C" + green($c) + "%2C" + blue($c) + "%2C" + alpha($c) + ")";
+    }
+
+    @return $r;
+  }
+
   $c: $color-fg;
 
   ul {
