Use full border for Site Navigation active item on small screen

--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -24,14 +24,11 @@
     position: relative;
 
     &::after {
-      $w: 30%;
-
       border: $width-border-small solid $color-fg-light;
       content: "";
       display: block;
-      left: ((100% - $w) / 2);
       position: absolute;
-      width: $w;
+      width: 100%;
     }
   }
 
@@ -43,5 +40,14 @@
       margin-left: $width-gap;
       margin-right: 0;
     }
+
+  mark {
+    &::after {
+      $w: 30%;
+
+      left: ((100% - $w) / 2);
+      width: $w;
+    }
+  }
   }
 }
