Collect colors by type

--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -1,16 +1,17 @@
-// Basic
+// Foreground
 $color-fg: hsl(40, 3%, 24%);
-$color-bg: hsl(40, 48%, 96%);
 
 $color-fg-dark: hsl(40, 3%, 15%);
 $color-fg-light: hsl(40, 3%, 45%);
+
+// Background
+$color-bg: hsl(40, 48%, 96%);
 
 $color-bg-dark: hsl(40, 24%, 75%);
 $color-bg-light: hsl(40, 96%, 99%);
 
 // Accent
 $color-accent: hsl(207, 69%, 42%);
-
 $color-accent-dark: hsl(207, 69%, 22%);
 $color-accent-light: hsl(207, 69%, 62%);
 
