Justify with distribute

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -40,6 +40,7 @@ h1 {
 p {
   margin: 0 0 $margin;
   text-align: inherit;
+  text-justify: distribute;
 }
 
 hr {
@@ -217,14 +218,6 @@ kbd {
   font-feature-settings: "zero" 1;
   font-size: 1em;
   word-break: break-all;
-
-  p &::before,
-  p &::after {
-    content: " ";
-    display: inline-block;
-    font-size: 0;
-    width: 0;
-  }
 }
 
 mark {
