--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -38,8 +38,9 @@ h1 {
 
 // Grouping Content
 p {
+  hyphens: auto;
   margin: 0 0 $margin;
-  text-align: inherit;
+  text-align: justify;
   text-justify: distribute;
 }
 
