--- a/src/css/widget/_pick.scss
+++ b/src/css/widget/_pick.scss
@@ -23,6 +23,10 @@
     margin: $m 10%;
   }
 
+  p {
+    text-align: inherit;
+  }
+
   footer {
     position: absolute;
     top: ($m - ($line-height-root * 1rem));
