Expand Picks with Fill correctly on large screen

--- a/src/css/widget/_pick.scss
+++ b/src/css/widget/_pick.scss
@@ -5,7 +5,8 @@
   $m: ($h * 2);
 
   background-color: $color-accent-light;
-  margin: $margin-top-h1 0 $margin;
+  margin-top: $margin-top-h1;
+  margin-bottom: $margin;
   padding: $padding-small;
   position: relative;
   text-align: center;
