Fix buggy justifying
`inter-cluster` looks good than `distribute` (`inter-character`) or
`inter-ideograph`.

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -41,7 +41,7 @@ p {
   hyphens: auto;
   margin: 0 0 $margin;
   text-align: justify;
-  text-justify: distribute;
+  text-justify: inter-cluster;
 }
 
 hr {
