--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -23,8 +23,8 @@
         <section>
           <h1 class="subheading">ライセンス</h1>
 
-          <figure>
-            <a href="{{license_url}}" rel="license"><img alt="Creative Commons — Attribution-NonCommercial" src="/images/about/cc-by-nc.png"></a>
+          <figure class="fill">
+            <a href="{{license_url}}" rel="license"><img alt="Creative Commons — Attribution-NonCommercial" height="1440" src="/images/about/cc-by-nc.svg" width="2560"></a>
             <figcaption>License Everything under a CC&#xa0;BY&#x2011;NC</figcaption>
           </figure>
 
