--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -170,7 +170,7 @@ figcaption {
 
     blockquote + & {
       position: static;
-      text-align: left;
+      text-align: inherit;
       width: auto;
     }
   }
@@ -282,7 +282,7 @@ td {
 th {
   @extend %table-cell;
 
-  text-align: left;
+  text-align: inherit;
 
   thead & {
     border-bottom: $width-border solid $color-border-table;
