--- a/src/css/widget/_fill.scss
+++ b/src/css/widget/_fill.scss
@@ -13,7 +13,7 @@
       bottom: auto;
       left: 0;
       margin-top: $margin;
-      text-align: left;
+      text-align: inherit;
     }
   }
 }
