Limit Move height to 8 lines

--- a/src/css/widget/_move.scss
+++ b/src/css/widget/_move.scss
@@ -7,7 +7,7 @@
   img {
     display: block;
     height: auto;
-    max-height: ($line-height-root * 12 * 1rem);
+    max-height: (($line-height-root * 8 - ($line-height-root - 1) / 2) * 1rem);
     max-width: ($width-content / 3);
     width: auto;
   }
