Fix move top and bottom position

--- a/src/css/widget/_move.scss
+++ b/src/css/widget/_move.scss
@@ -1,13 +1,15 @@
 // Move
 .move {
   $m: $width-gap-small;
+  $g: (($line-height-root - 1) / 2);
 
-  margin-bottom: $margin-minimal;
+  margin-bottom: 0;
+  margin-top: ($g * 1rem);
 
   img {
     display: block;
     height: auto;
-    max-height: (($line-height-root * 8 - ($line-height-root - 1) / 2) * 1rem);
+    max-height: (($line-height-root * 8 - $g * 2) * 1rem);
     max-width: ($width-content / 3);
     width: auto;
   }
