Fix Site Search button color

--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -1,5 +1,19 @@
 // Site Search
 .site-search {
+  @function encode-color($c) {
+    $r: "" + $c;
+
+    @if (str-index($r, "#") == 1) {
+      $r: "%23" + str-slice($r, 2);
+    }
+
+    @if (str-index($r, "rgba") == 1) {
+      $r: "rgba(" + red($c) + "%2C" + green($c) + "%2C" + blue($c) + "%2C" + alpha($c) + ")";
+    }
+
+    @return $r;
+  }
+
   position: relative;
 
   input {
