Use accent color for Site Navigation active item

--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -24,7 +24,7 @@
     position: relative;
 
     &::after {
-      border: $width-border-small solid $color-fg-light;
+      border: $width-border-small solid $color-accent-light;
       content: "";
       display: block;
       position: absolute;
