Use Yu Gothic UI for Japanese text
This enabled only on Windows 7+.

--- a/src/css/var/_font.scss
+++ b/src/css/var/_font.scss
@@ -1,5 +1,5 @@
 // System UI
-$font-stack-system-ui-local: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+$font-stack-system-ui-local: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Yu Gothic UI", sans-serif;
 $font-stack-system-ui: $font-stack-system-ui-local;
 
 // Sans Serif
