Split Global Header contents on small screen

--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -1,21 +1,19 @@
 // Global Header
 .global-header {
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: row wrap;
   margin-left: auto;
   margin-right: auto;
   margin-top: $margin-top-global-header;
   max-width: $width-content;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
-  position: relative;
 
   a {
     text-decoration: none;
   }
 
   @media (min-width: $breakpoint-content) {
-    flex-direction: row;
     margin-top: $margin-top-global-header-content;
   }
 
