--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -5,7 +5,7 @@
   font-weight: 700;
   line-height: inherit;
   margin-bottom: 0;
-  margin-top: $margin-tiny;
+  margin-top: 0;
   text-transform: uppercase;
 
   a {
@@ -14,11 +14,10 @@
 
   @media (min-width: $breakpoint-content) {
     font-size: ($ratio-text-logo-content * 1rem);
-    margin-top: 0;
   }
 
   @media (min-width: $breakpoint-full) {
-    flex: initial;
+    flex: 0 1 auto;
     margin-left: (- ($width-supplement + $width-gap));
     width: $width-supplement;
   }
