--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -1,7 +1,5 @@
 // Site Navigation
 .site-navigation {
-  order: -1;
-
   ul {
     display: flex;
     margin-bottom: 0;
@@ -11,7 +9,7 @@
   li {
     display: block;
     font-size: ($ratio-text-logo * 1rem);
-    margin-right: $width-gap-small;
+    margin-left: $width-gap-small;
   }
 
   a {
@@ -33,12 +31,9 @@
   }
 
   @media (min-width: $breakpoint-content) {
-    order: 0;
-
     li {
       font-size: ($ratio-text-logo-content * 1rem);
       margin-left: $width-gap;
-      margin-right: 0;
     }
   }
 }
