Darken em and strong color

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -188,11 +188,13 @@ a {
 }
 
 em {
+  color: $color-fg-dark;
   font-style: normal;
   font-weight: 700;
 }
 
 strong {
+  color: $color-fg-dark;
   font-size: ($ratio-text-small * 1rem);
   -webkit-text-emphasis-style: dot;
   text-emphasis-style: dot;
