--- a/src/css/var/_font.scss
+++ b/src/css/var/_font.scss
@@ -7,7 +7,7 @@ $font-stack-sans-serif-local: "Helvetica Neue", "Calibri", sans-serif;
 $font-stack-sans-serif: $font-stack-sans-serif-local;
 
 // Serif
-$font-stack-serif-local: "Hoefler Text", "Constantia", serif;
+$font-stack-serif-local: "Baskerville", "Constantia", serif;
 $font-stack-serif: $font-stack-serif-local;
 
 // Monospace
