Name >FHD breakpoints

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -13,7 +13,7 @@
     font-size: percentage($ratio-text-root-full);
   }
 
-  @media (min-width: 1921px) and (min-height: 1081px) {
+  @media (min-width: $breakpoint-fhd-up-width) and (min-height: $breakpoint-fhd-up-height) {
     font-size: 1vw;
   }
 }
