--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -39,6 +39,8 @@ $width-blank: ($width-content / $ratio / $ratio / $ratio);
 $width-scrollbar: 2rem;
 $breakpoint-content: (($width-blank + $width-content-outer + $width-blank) * $ratio-text-root-content / $ratio-text-root + $width-scrollbar);
 $breakpoint-full: (($width-blank + $width-full-outer + $width-blank) * $ratio-text-root-full / $ratio-text-root + $width-scrollbar);
+$breakpoint-fhd-up-width: 1921px;
+$breakpoint-fhd-up-height: 1081px;
 
 // Core
 $margin-top-h1: $margin-gargantuan;
